--- a/example/dune
+++ b/example/dune
@@ -4,6 +4,20 @@
   (package example)
   (ocamlc_flags -w -9-27)
   (ocamlopt_flags -w -9-27)
-  (libraries boiler)
+  (preprocess (pps brisk-reconciler.ppx))
+  (libraries
+    Revery
+    timber
+    boiler
+  )
 )
+
+(install
+  (package example)
+  (section bin)
+  (files
+    Roboto-Regular.ttf
+  )
+)
+
 (include_subdirs unqualified)
